--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body>
     <div class="wrapper">
-        <input type="text" id="input" placeholder="Bread" autocomplete="off">
-        <button id="button">Add to Cart</button>
+        <input type="text" id="input" placeholder="Earn Money" autocomplete="off">
+        <button id="button">Add to List</button>
         <ul id="list"></ul>
     </div>
     <script src="index.js" type="module"></script>
